src/BadScript.Tests/tests/passing/operators/block/for/operators/le.bs
v = 0
for i = 0 while<= 10
{
	v = i
}
return v == 10