src/BadScript.Tests/tests/failing/invalid-syntax/invalidFor_02.bs
for i = 0 while< 10 setp 0
{
	
}